--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "prebuild": "npm run typegen",
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
-  "packageManager": "npm@10.5.2",
+  "packageManager": "npm@10.7.0",
   "overrides": {
     "react": "$react",
-    "react-dom": "$react-dom"
+    "react-dom": "$react-dom",
+    "next": "$next"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
@@ -24,7 +25,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
-    "next": "15.0.3",
+    "markdown-it": "^14.1.0",
+    "next": "^15.0.4-canary.48",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.25",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -37,6 +39,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
